feat: getProductByCategory handler & category product component
