# Backend/src/routes/v1/product.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from "express";
-import { createProductHandler, deleteProductHandler, getAllProductssHandler, getProductHandler, updateProductHandler } from "../../controllers/product.controllers.js";
+import { createProductHandler, deleteProductHandler, getAllProductssHandler, getProductByCategory, getProductHandler, updateProductHandler } from "../../controllers/product.controllers.js";
 import isAuthenticated from "../../middlewares/isAuthenticated.middleware.js";
 import { upload } from "../../middlewares/multer.middleware.js";
 import validateRequest from "../../middlewares/validateRequest.middleware.js";
-import { createProductSchema, deletProductSchema, updateProductSchema } from "../../schema/product.schema.js";
+import { createProductSchema, getProductByIdSchema, updateProductSchema } from "../../schema/product.schema.js";
 
 const router = Router();
 
@@ -14,6 +14,8 @@ router.route("/")
 router.route("/:id")
 .get(getProductHandler)
 .patch(isAuthenticated, validateRequest(updateProductSchema), updateProductHandler)
-.delete(isAuthenticated, validateRequest(deletProductSchema), deleteProductHandler);
+.delete(isAuthenticated, validateRequest(getProductByIdSchema), deleteProductHandler);
+
+router.route("/category/:id").get(validateRequest(getProductByIdSchema), getProductByCategory)
 
 export default router;
